--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,14 @@
     ],
     "autoload": {
         "files": [
-            "src/MirasvitGdpr/registration.php"
+            "src/MirasvitGdpr/registration.php",
+            "src/MirasvitGdprConsent/registration.php",
+            "src/MirasvitGdprCookie/registration.php"
         ],
         "psr-4": {
-            "Hyva\\MirasvitGdpr\\": "src/MirasvitGdpr"
+            "Hyva\\MirasvitGdpr\\": "src/MirasvitGdpr",
+            "Hyva\\MirasvitGdprConsent\\": "src/MirasvitGdprConsent",
+            "Hyva\\MirasvitGdprCookie\\": "src/MirasvitGdprCookie"
         }
     }
 }
